# jp-medicine-master

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pytest.yml
jp_medicine_master/: _.py  __init__.py  master.py  usage.py
jp_medicine_master/_/: __init__.py
jp_medicine_master/ag/: __init__.py
jp_medicine_master/bs/: __init__.py
jp_medicine_master/mhlw/: __init__.py
jp_medicine_master/shinryohoshu_mhlw/: __init__.py
jp_medicine_master/ssk/: __init__.py
tests/: test_.py  test_ag.py  test_bs.py  test_master.py  test_mhlw.py  test_shinryohoshu_mhlw.py  test_ssk.py  test_usage.py
