[project]
name = "jp_medicine_master"
version = "2.1.0"
description = "日本で使用される医薬品マスタを簡単に取得・利用するためのライブラリ"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "SHIRO", email = "shiro46mt@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Natural Language :: Japanese",
]
dependencies = [
  "pandas",
  "requests",
]

[project.urls]
Repository = "https://github.com/shiro46mt/jp-medicine-master.git"
